asker (0.4.0); urgency=low

  * add some support for https (be careful with agents usage for https)

 -- Phillip Kovalev <twilightfeel@gmail.com>  Mon, 07 Apr 2014 14:55:13 +0400

asker (0.3.2); urgency=low

  * fix serialization of non-string literals in multipart encoder:
    all non-string literals automatically casted as strings

 -- Phillip Kovalev <twilightfeel@gmail.com>  Fri, 06 Dec 2013 16:13:40 +0400

asker (0.3.1); urgency=low

  * allow to list options accepted by asker request constructor

 -- Phillip Kovalev <twilightfeel@gmail.com>  Fri, 1 Nov 2013 21:30:00 +0400

asker (0.3.0); urgency=low

  * add "raw" body encoder to pass raw Buffer as request body

 -- Phillip Kovalev <twilightfeel@gmail.com>  Thu, 24 Oct 2013 21:23:05 +0400

asker (0.2.2); urgency=low

  * fix error name duplication in AskerError
  * remove redundant UNKNOWN_ERROR code overriding

 -- Phillip Kovalev <twilightfeel@gmail.com>  Fri, 23 Aug 2013 13:50:35 +0400

asker (0.2.1); urgency=low

  * change `terror` dependency version to 0.3.x

 -- Phillip Kovalev <twilightfeel@gmail.com>  Sun, 11 Aug 2013 19:21:31 +0400

asker (0.2.0); urgency=low

  * implement body encoding and support for custom encoders
  https://github.com/nodules/asker/issues/9

  * allow to pass callback to Request#execute method
  https://github.com/nodules/asker/issues/59

  * add jscs to npm test toolchain

  * response.data must be a buffer, not a string
  https://github.com/nodules/asker/issues/6

 -- Phillip Kovalev <twilightfeel@gmail.com>  Fri, 02 Aug 2013 19:09:27 +0400

asker (0.1.13); urgency=low

  * fulfill error message for code UNEXPECTED_STATUS_CODE
  https://github.com/nodules/asker/issues/72

 -- Phillip Kovalev <twilightfeel@gmail.com>  Fri, 26 Jun 2013 11:07:15 +0400

asker (0.1.12); urgency=critical

  * full code coverage by tests
  https://github.com/nodules/asker/issues?labels=test&milestone=3&page=1&state=closed

  * drop support for Node.js < 0.8.21 due to the bugs in the "http" module
