@@ -175,7 +175,8 @@ Request.DEFAULT_OPTIONS = {
     onretry : undefined,
     statusFilter : undefined,
     queueTimeout : undefined,
-    agent : undefined
+    agent : undefined,
+    port : undefined
 };
 
 /**
