@@ -1,6 +1,6 @@
 {
   "name": "asker",
-  "version": "0.4.0",
+  "version": "0.4.1",
   "description": "http.request wrapper with request retries and http.Agent tuning",
   "main": "./lib/asker.js",
   "scripts": {
